[project]
name = "wz_doudizhu"
version = "0.0.1"
authors = [
  { name="wz", email="353782686@qq.com" },
]
description = "演示一个斗地主游戏"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"